--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
