--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "eslint '{lib,pages,.}/**/*.js'",
-    "lint:fix": "eslint '{lib,pages,.}/**/*.js' --fix",
+    "lint": "eslint --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
+    "lint:fix": "eslint --fix --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
     "start": "next start",
     "test": "jest"
   },
