switch to module import shorthand

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,13 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "paths": {
+      "@lib/*": ["lib/*"],
+      "@components/*": ["components/*"],
+      "@containers/*": ["containers/*"],
+      "@pages/*": ["pages/*"]
+    }
   },
   "exclude": [
     "./*.js"
