--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+      "@lib/(.*)": "<rootDir>/lib/$1",
+      "@components/(.*)": "<rootDir>/components/$1",
+      "@containers/(.*)": "<rootDir>/containers/$1",
+      "@pages/(.*)": "<rootDir>/pages/$1"
     }
   }
 }
