--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "eslint --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
+    "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
     "lint:fix": "eslint --fix --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
     "start": "next start",
     "test": "jest"
