--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
