--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.161",
     "lodash": "^4.17.20",
     "next": "9.5.2",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10"
