--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.161",
     "lodash": "^4.17.20",
-    "next": "9.5.2",
+    "next": "^9.5.3",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
