--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,6 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "tsBuildInfoFile": ".tsbuildinfo",
     "skipLibCheck": true,
     "strictPropertyInitialization": false,
     "allowJs": true,
@@ -29,10 +27,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "paths": {
-      "@lib/*": ["lib/*"],
-      "@components/*": ["components/*"],
-      "@containers/*": ["containers/*"],
-      "@pages/*": ["pages/*"]
+      "@lib/*": [
+        "lib/*"
+      ],
+      "@components/*": [
+        "components/*"
+      ],
+      "@containers/*": [
+        "containers/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ]
     }
   },
   "exclude": [
