--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash": "^4.14.161",
     "lodash": "^4.17.20",
     "next": "^9.5.3",
+    "next-pwa": "^3.1.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
