--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# next-pwa
+/public/sw.js
+/public/sw.js.map
+/public/workbox-*
+
 # dependencies
 /node_modules
 /.pnp
