--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "next": "^9.5.3",
     "next-pwa": "^3.1.4",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "react-intl": "^5.8.3",
     "sass": "^1.26.10"
   },
   "devDependencies": {
