--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "full-icu": "^1.3.1",
     "lodash": "^4.17.20",
     "next": "^9.5.3",
     "next-pwa": "^3.1.4",
