--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:fix": "eslint --fix --ext .ts --ext .tsx --ext .js --ext .jsx components/ containers/ lib/ pages/",
     "start": "next start",
     "test": "jest",
-    "extract": "formatjs extract src/**/*.tsx --out-file public/lang/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'"
+    "extract": "formatjs extract src/**/*.tsx --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json"
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
