--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-formatjs": "^2.7.12",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest-dom": "^3.2.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-testing-library": "^3.9.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "jest-runner-eslint": "^0.10.0",
@@ -57,7 +59,12 @@
   },
   "jest-runner-eslint": {
     "cliOptions": {
-      "ext": [".js",".jsx",".ts",".tsx"],
+      "ext": [
+        ".js",
+        ".jsx",
+        ".ts",
+        ".tsx"
+      ],
       "maxWarnings": 0
     }
   }
