--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "@xstate/react": "^1.0.1",
+    "@xstate/test": "^0.4.1",
     "full-icu": "^1.3.1",
     "lodash": "^4.17.20",
     "next": "^9.5.5",
@@ -23,7 +25,8 @@
     "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-intl": "^5.8.3",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "xstate": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
