--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "feed": "^4.2.1",
     "full-icu": "^1.3.1",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
