--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/public/**/*.xml
+
 # next-pwa
 /public/sw.js
 /public/sw.js.map
