--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "@types/mkdirp": "^1.0.1",
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
     "lodash": "^4.17.20",
+    "mkdirp": "^1.0.4",
     "next": "^10.0.0",
     "next-pwa": "^3.1.4",
     "react": "^16.13.1",
