--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "extract": "formatjs extract src/**/*.tsx --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
-    "compile": "formatjs compile-folder --ast public/lang public/compiled-lang"
+    "extract": "formatjs extract 'src/**/*.tsx' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
+    "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
+    "list": "ls src/**/*.tsx"
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
