pr feedback changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "extract": "formatjs extract 'src/**/*.tsx' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
-    "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
+    "compile": "formatjs compile-folder --ast public/lang public/compiled-lang"
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
