--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang"
   },
   "dependencies": {
+    "@types/cookie": "^0.4.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
+    "cookie": "^0.4.1",
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
     "next-pwa": "^3.1.4",
