--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.161",
+    "@types/video.js": "^7.3.11",
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
     "lodash": "^4.17.20",
@@ -25,7 +26,8 @@
     "react-dom": "16.13.1",
     "react-intl": "^5.8.3",
     "react-query": "^2.26.3",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "video.js": "^7.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
