--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/cookie": "^0.4.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
-    "cookie": "^0.4.1",
     "@types/video.js": "^7.3.11",
+    "cookie": "^0.4.1",
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
     "js-cookie": "^2.2.1",
@@ -30,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-intl": "^5.8.3",
     "react-query": "^2.26.3",
+    "react-tooltip": "^4.2.11",
     "sass": "^1.26.10",
     "video.js": "^7.10.2"
   },
