--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cookie": "^0.4.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
+    "@types/react-modal": "^3.10.6",
     "@types/video.js": "^7.3.11",
     "cookie": "^0.4.1",
     "feed": "^4.2.1",
@@ -29,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "16.13.1",
     "react-intl": "^5.8.3",
+    "react-modal": "^3.12.1",
     "react-query": "^2.26.3",
     "react-tooltip": "^4.2.11",
     "sass": "^1.26.10",
