--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jest": "^26.4.2",
     "jest-runner-eslint": "^0.10.0",
     "prettier": "^2.1.1",
+    "react-topbar-progress-indicator": "^4.1.0",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
