--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
     "@types/react-modal": "^3.10.6",
+    "@types/react-query": "^1.1.2",
     "@types/video.js": "^7.3.11",
     "cookie": "^0.4.1",
     "feed": "^4.2.1",
@@ -33,7 +34,7 @@
     "react-dom": "16.13.1",
     "react-intl": "^5.8.3",
     "react-modal": "^3.12.1",
-    "react-query": "^2.26.3",
+    "react-query": "^3.5.5",
     "react-tooltip": "^4.2.11",
     "sass": "^1.26.10",
     "video.js": "^7.10.2"
