--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "jest --watch",
     "extract": "formatjs extract 'src/**/*.tsx' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
-    "precommit": "npm run lint && npm run test",
+    "precommit": "npm run lint:fix && npm run test",
     "postinstall": "husky install"
   },
   "dependencies": {
