fix console errors

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^5.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
+    "jest-canvas-mock": "^2.3.0",
     "prettier": "^2.1.1",
     "react-topbar-progress-indicator": "^4.1.0",
     "ts-jest": "^26.3.0",
