--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "extract": "formatjs extract 'src/**/*.tsx' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
     "precommit": "npm run lint:fix && jest --config=jest.config.precommit.js",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "graphql:codegen": "graphql-codegen --config .graphqlrc.yml"
   },
   "dependencies": {
     "@types/cookie": "^0.4.0",
@@ -25,6 +26,7 @@
     "cookie": "^0.4.1",
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
+    "graphql": "^15.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
@@ -46,6 +48,10 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@formatjs/cli": "^2.12.0",
+    "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-operations": "1.17.13",
+    "@graphql-codegen/typescript-react-query": "^1.0.0",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
@@ -64,6 +70,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-testing-library": "^3.9.2",
+    "graphql-tag": "^2.11.0",
     "husky": "^5.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
