--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -9,8 +9,4 @@ generates:
       - 'typescript-react-query'
       - 'getter-plugin.js'
     config:
-      fetcher:
-        endpoint: 'https://graphql-staging.audioverse.org/graphql'
-        fetchParams:
-          headers:
-            My-Header: SomeValue
+      fetcher: '@lib/api/fetchApi#graphqlFetcher'
