Use const enums to fix language type

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -9,4 +9,5 @@ generates:
       - 'typescript-react-query'
       - 'getter-plugin.js'
     config:
+      constEnums: true
       fetcher: '@lib/api/fetchApi#graphqlFetcher'
