--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write .",
     "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx src/",
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts --ext .tsx --ext .js --ext .jsx src/",
-    "start": "next start",
+    "start": "NODE_ICU_DATA=node_modules/full-icu next start",
     "test": "TZ=UTC jest",
     "test:watch": "TZ=UTC jest --watch",
     "extract": "formatjs extract 'src/**/*.tsx' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
