--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -7,6 +7,6 @@ generates:
       - "typescript"
       - "typescript-operations"
       - 'typescript-react-query'
-      - 'getter-plugin.js'
+      - 'graphql-plugin-getters.js'
     config:
       fetcher: '@lib/api/fetchApi#graphqlFetcher'
