add format command to precommit

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,11 +1,11 @@
 overwrite: true
-schema: "https://graphql-staging.audioverse.org/graphql"
-documents: "src/**/*.graphql"
+schema: 'https://graphql-staging.audioverse.org/graphql'
+documents: 'src/**/*.graphql'
 generates:
   src/lib/generated/graphql.ts:
     plugins:
-      - "typescript"
-      - "typescript-operations"
+      - 'typescript'
+      - 'typescript-operations'
       - 'typescript-react-query'
       - 'graphql-plugin-getters.js'
     config:
