--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "TZ=UTC jest --watch",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
-    "precommit": "npm run lint:fix && TZ=UTC jest --config=jest.config.precommit.js",
+    "precommit": "npm run format && npm run lint:fix && TZ=UTC jest --config=jest.config.precommit.js",
     "postinstall": "husky install",
     "graphql:codegen": "graphql-codegen --config .graphqlrc.yml"
   },
