--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Run tests
         run: npm test
   lighthouse:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
