--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: NODE_ENV=development npm run build
       - uses: actions/upload-artifact@v2
         with:
           name: build-output
