--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install dependencies
-        run: npm ci
+        run: npm ci && npm install -g @lhci/cli@0.6.x
       - name: Build
         run: npm run build
       - name: Run Lighthouse
