--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
     "precommit": "npm run format && npm run lint:fix && tsc --noEmit && TZ=UTC jest --config=jest.config.precommit.js",
     "postinstall": "husky install",
-    "graphql:codegen": "graphql-codegen --config .graphqlrc.yml"
+    "graphql:codegen": "graphql-codegen --config .graphqlrc.yml",
+    "lighthouse": "npx lhci autorun"
   },
   "dependencies": {
     "@types/cookie": "^0.4.0",
@@ -39,7 +40,7 @@
     "react-tooltip": "^4.2.11",
     "react-topbar-progress-indicator": "^4.1.0",
     "sass": "^1.26.10",
-    "video.js": "^7.10.2"
+    "video.js": "^7.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
@@ -52,6 +53,7 @@
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-operations": "1.17.13",
     "@graphql-codegen/typescript-react-query": "^1.0.0",
+    "@lhci/cli": "^0.7.0",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
