--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,6 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
-    env:
-      NODE_ENV: development
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
@@ -44,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: npm run build:dev
       - name: Run Lighthouse
         run: npm run lighthouse
   test:
