--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
+    "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
     "format": "prettier --write .",
     "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx src/",
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts --ext .tsx --ext .js --ext .jsx src/",
@@ -54,6 +55,7 @@
     "@graphql-codegen/typescript-operations": "1.17.13",
     "@graphql-codegen/typescript-react-query": "^1.0.0",
     "@lhci/cli": "^0.7.0",
+    "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
@@ -64,7 +66,7 @@
     "@typescript-eslint/parser": "^4.0.1",
     "babel-jest": "^26.3.0",
     "babel-plugin-react-intl": "^8.2.4",
-    "eslint": "^7.10.0",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-formatjs": "^2.7.12",
