--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next-pwa": "^3.1.4",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-intl": "^5.8.3",
     "react-query": "^3.5.5",
     "react-toastify": "^6.2.0",
@@ -50,7 +52,7 @@
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-operations": "1.17.13",
     "@graphql-codegen/typescript-react-query": "^1.0.0",
-    "@lhci/cli": "^0.7.0",
+    "@lhci/cli": "^0.7.1",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -61,6 +63,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.49",
+    "@types/react-facebook-login": "^4.1.3",
     "@types/react-query": "^1.1.2",
     "@types/video.js": "^7.3.11",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
