--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "feed": "^4.2.1",
     "full-icu": "^1.3.1",
     "graphql": "^15.4.0",
+    "inter-ui": "^3.18.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "next": "^10.0.0",
