--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "precommit": "npm run format && npm run lint:fix && tsc --noEmit && TZ=UTC jest --config=jest.config.precommit.js",
     "postinstall": "husky install",
     "graphql:codegen": "graphql-codegen --config .graphqlrc.yml",
-    "lighthouse": "npx lhci autorun"
+    "lighthouse": "npx lhci autorun",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "cookie": "^0.4.1",
@@ -55,6 +57,11 @@
     "@graphql-codegen/typescript-react-query": "^1.0.0",
     "@lhci/cli": "^0.7.1",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.2",
@@ -70,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "babel-jest": "^26.3.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-react-intl": "^8.2.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^6.11.0",
