--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "cookie": "^0.4.1",
     "feed": "^4.2.1",
+    "framer-motion": "^4.1.17",
     "full-icu": "^1.3.1",
     "graphql": "^15.4.0",
     "inter-ui": "^3.18.1",
