--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.49",
     "@types/react-facebook-login": "^4.1.3",
+    "@types/react-is": "^17.0.0",
     "@types/react-query": "^1.1.2",
     "@types/video.js": "^7.3.11",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
