--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "jest-when": "^3.1.0",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
+    "tsconfig-paths-jest": "^0.0.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.0.2"
   }
 }
