--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "cookie": "^0.4.1",
     "feed": "^4.2.1",
     "framer-motion": "^4.1.17",
