--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-tooltip": "^4.2.11",
     "react-topbar-progress-indicator": "^4.1.0",
     "sass": "^1.26.10",
+    "type-fest": "^1.2.0",
     "video.js": "^7.12.0"
   },
   "devDependencies": {
