--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "inter-ui": "^3.18.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "masonic": "^3.4.1",
     "next": "^10.0.0",
     "next-pwa": "^3.1.4",
     "react": "^16.13.1",
