--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
     "@types/react": "^16.9.49",
+    "@types/react-dom": "^17.0.7",
     "@types/react-facebook-login": "^4.1.3",
     "@types/react-is": "^17.0.0",
     "@types/react-query": "^1.1.2",
