--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "masonic": "^3.4.1",
     "next": "^10.0.0",
     "next-pwa": "^3.1.4",
-    "react": "^16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-intl": "^5.8.3",
