--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@graphql-codegen/typescript-react-query": "^1.0.0",
     "@lhci/cli": "^0.7.1",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
+    "@next/eslint-plugin-next": "^11.0.1",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
