--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "masonic": "^3.4.1",
-    "next": "^10.0.0",
-    "next-pwa": "^3.1.4",
+    "next": "^11.0.1",
+    "next-pwa": "^5.2.24",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
@@ -88,6 +88,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-react-intl": "^8.2.4",
     "eslint": "^7.24.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-formatjs": "^2.7.12",
@@ -101,7 +102,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "jest-canvas-mock": "^2.3.0",
-    "jest-when": "^3.1.0",
+    "jest-when": "^3.3.1",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
     "tsconfig-paths-jest": "^0.0.1",
