--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "start": "NODE_ICU_DATA=node_modules/full-icu next start",
     "test": "TZ=UTC jest",
     "test:watch": "TZ=UTC jest --watch",
+    "test:strict": "TZ=UTC jest --config=jest.config.strict.js",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang",
-    "precommit": "npm run format && npm run lint:fix && tsc --noEmit && TZ=UTC jest --config=jest.config.precommit.js",
+    "precommit": "npm run format && npm run lint:fix && tsc --noEmit",
     "postinstall": "husky install",
     "graphql:codegen": "graphql-codegen --config .graphqlrc.yml",
     "lighthouse": "npx lhci autorun",
