First pass at sponsor detail, collection card

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -11,3 +11,8 @@ generates:
     config:
       fetcher: '@lib/api/fetchApi#graphqlFetcher'
       avoidOptionals: true
+      scalars:
+        Date: 'string'
+        DateTime: 'string'
+        RelativeDateTime: 'string'
+        URL: 'string'
