--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Scan for security issues
-        run: npm audit
+        run: npm run audit
   lint:
     runs-on: ubuntu-latest
     steps:
