--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-canvas-mock": "^2.3.0",
+    "jest-date-mock": "^1.0.8",
     "jest-when": "^3.3.1",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5",
