--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@formatjs/cli": "^2.12.0",
+    "@graphql-codegen/add": "^3.1.0",
     "@graphql-codegen/cli": "^2.0.1",
+    "@graphql-codegen/schema-ast": "^2.2.0",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-operations": "^2.0.1",
     "@graphql-codegen/typescript-react-query": "^2.0.0",
