--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "clsx": "^1.1.1",
     "cookie": "^0.4.1",
     "dayjs": "^1.10.6",
-    "feed": "^4.2.1",
+    "feed": "github:mattleff/feed#custome-elements-build",
     "framer-motion": "^4.1.17",
     "full-icu": "^1.3.1",
     "graphql": "^15.4.0",
+    "he": "^1.2.0",
     "inter-ui": "^3.18.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -49,6 +50,7 @@
     "react-tooltip": "^4.2.11",
     "react-topbar-progress-indicator": "^4.1.0",
     "sass": "^1.26.10",
+    "striptags": "^3.2.0",
     "video.js": "^7.14.3"
   },
   "devDependencies": {
@@ -73,6 +75,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/cookie": "^0.4.1",
+    "@types/he": "^1.1.2",
     "@types/jest-when": "^2.7.3",
     "@types/js-cookie": "^2.2.7",
     "@types/lodash": "^4.14.172",
@@ -110,6 +113,6 @@
     "tsconfig-paths-jest": "^0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "type-fest": "^2.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   }
 }
