--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
     "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
-    "audit": "audit-ci -l -a 1769 1002373 1002401 1002423 1002466 1002531",
+    "audit": "audit-ci --config audit-ci.json",
     "checkTs": "tsc --noEmit",
     "format": "prettier --write .",
     "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx src/",
@@ -37,7 +37,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "masonic": "^3.4.1",
-    "next": "^11.1.2",
+    "next": "^12.0.1",
     "next-pwa": "^5.3.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -86,7 +86,7 @@
     "@types/video.js": "^7.3.27",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "audit-ci": "^4.1.0",
+    "audit-ci": "^4.2.0",
     "babel-jest": "^27.2.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-intl": "^8.2.4",
