--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "masonic": "^3.4.1",
     "next": "^12.0.1",
     "next-pwa": "^5.4.1",
+    "node-forge": "^0.10.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -76,6 +77,7 @@
     "@types/jest-when": "^2.7.3",
     "@types/js-cookie": "^2.2.7",
     "@types/lodash": "^4.14.177",
+    "@types/node-forge": "^0.10.10",
     "@types/react": "^17.0.36",
     "@types/react-dom": "^17.0.11",
     "@types/react-facebook-login": "^4.1.4",
