Update langs and add extract new script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "TZ=UTC jest --watch",
     "test:strict": "TZ=UTC jest --config=jest.config.strict.js",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
+    "extract:new": "./lang-extract-new.js",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
     "precommit": "npm run format && npm run lint:fix && npm run checkTs",
     "postinstall": "husky install",
