Use consts instead of enums in GraphQL types

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -19,6 +19,7 @@ generates:
     config:
       fetcher: '@lib/api/fetchApi#graphqlFetcher'
       avoidOptionals: true
+      enumsAsConst: true
       scalars:
         ID: 'string | number'
         Date: 'string'
