correct prettier ci job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         id: prettier-run
         uses: rutajdash/prettier-cli-action@v1.0.0
         with:
-          config_path: ./.prettierrc.yml
+          config_path: ./.prettierrc
         timeout-minutes: 1
       # This step only runs if prettier finds errors causing the previous step to fail
       # This steps lists the files where errors were found
