--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
         id: prettier-run
         uses: rutajdash/prettier-cli-action@v1.0.0
         with:
+          file_pattern: '**/*.{js,jsx,ts,tsx}'
           config_path: ./.prettierrc
         timeout-minutes: 1
       # This step only runs if prettier finds errors causing the previous step to fail
