request PR write access to fix dependabot checks

--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -11,6 +11,9 @@ defaults:
   run:
     working-directory: ./
 
+permissions:
+  pull-requests: write
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
