--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "audioverse-next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "NODE_ICU_DATA=node_modules/full-icu next build",
@@ -14,8 +15,8 @@
     "lint": "eslint --max-warnings 0 --ext .ts --ext .tsx --ext .js --ext .jsx src/",
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts --ext .tsx --ext .js --ext .jsx src/",
     "start": "NODE_ICU_DATA=node_modules/full-icu next start",
-    "test": "TZ=UTC jest",
-    "test:watch": "TZ=UTC jest --watch",
+    "test": "TZ=UTC vitest",
+    "test:ui": "TZ=UTC vitest --ui",
     "test:strict": "TZ=UTC jest --config=jest.config.strict.js",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
     "extract:new": "./lang-extract-new.js",
@@ -90,9 +91,12 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-facebook-login": "^4.1.4",
     "@types/react-is": "^17.0.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/video.js": "^7.3.31",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/ui": "^0.26.2",
     "audit-ci": "^6.3.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
@@ -119,7 +123,11 @@
     "tsconfig-paths-jest": "^0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.12.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "vite-aliases": "^0.9.8",
+    "vite-plugin-svgr": "^2.4.0",
+    "vitest": "^0.26.2",
+    "vitest-mock-extended": "^1.0.8"
   },
   "nextBundleAnalysis": {
     "budget": 230400,
