dependabot pr codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,3 @@
-* @narthur @mattleff @jlaverde77
+*                   @narthur @jlaverde77
+package.json        @narthur
+package-lock.json   @narthur
