--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
     "analyze:browser": "BUNDLE_ANALYZE=browser npm run build:webpack-only",
     "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
-    "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000"
+    "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
